parser/oceanbase_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ALTER
    ANALYZE
    ANY
    APPROXIMATE
    ARRAY
    AT
    BERNOULLI
    CALL
    CATALOGS
    COALESCE
    COLUMN
    COLUMNS
    COMMIT
    COMMITTED
    CONFIDENCE
    CONSTRAINT
    CUBE
    CURRENT
    DATA
    DATE
    DAY
    DESCRIBE
    DISTRIBUTED
    DROP
    ESCAPE
    EXPLAIN
    EXTRACT
    FOLLOWING
    FORCE
    FORMAT
    FUNCTIONS
    GRANT
    GRAPHVIZ
    GROUPING
    HOUR
    ICONST
    IF
    INDEX
    INTERVAL
    ISOLATION
    LEVEL
    LOCK
    LOGICAL
    MAP
    MINUTE
    MODE
    MONTH
    NFC
    NFD
    NFKC
    NFKD
    NO
    NORMALIZE
    NULLIF
    NUMBER
    ONLY
    OPTION
    ORDINALITY
    OVER
    PARTITION
    PARTITIONS
    POISSONIZED
    POSITION
    PRECEDING
    PRIVILEGES
    PUBLIC
    RANGE
    READ
    RECURSIVE
    RENAME
    REPEATABLE
    REPLACE
    RESCALED
    RESET
    ROLLBACK
    ROLLUP
    ROW
    ROWS
    SCHEMAS
    SECOND
    SERIALIZABLE
    SESSION
    SETS
    SHARE
    SHOW
    SOME
    START
    STRATIFY
    STRING
    SUBSTRING
    SYSTEM
    TABLES
    TABLESAMPLE
    TEXT
    TIME
    TO
    TOP
    TRANSACTION
    TRY
    TRY_CAST
    TYPE
    UNBOUNDED
    UNCOMMITTED
    UNNEST
    USE
    VIEW
    WITH
    WORK
    WRITE
    YEAR
    ZONE

Grammar

Rule 0     S' -> command
Rule 1     command -> ddl
Rule 2     command -> dml
Rule 3     ddl -> create_table
Rule 4     dml -> statement
Rule 5     create_table -> CREATE TABLE identifier LPAREN column_list RPAREN create_table_end
Rule 6     create_table -> CREATE TABLE identifier LPAREN column_list COMMA primary_clause RPAREN create_table_end
Rule 7     create_table_end -> ENGINE EQ identifier DEFAULT CHARSET EQ identifier
Rule 8     create_table_end -> DEFAULT CHARSET EQ identifier COLLATE EQ identifier COMPRESSION EQ SCONST REPLICA_NUM EQ INTEGER BLOCK_SIZE EQ INTEGER USE_BLOOM_FILTER EQ FALSE TABLET_SIZE EQ INTEGER PCTFREE EQ INTEGER
Rule 9     column_list -> column
Rule 10    column_list -> column_list COMMA column
Rule 11    column -> identifier column_type
Rule 12    column -> identifier column_type UNIQUE
Rule 13    column_type -> INT column_end
Rule 14    column_type -> INT LPAREN INTEGER RPAREN column_end
Rule 15    column_type -> FLOAT column_end
Rule 16    column_type -> BIGINT column_end
Rule 17    column_type -> BIGINT LPAREN INTEGER RPAREN column_end
Rule 18    column_type -> TINYINT LPAREN INTEGER RPAREN column_end
Rule 19    column_type -> DATETIME column_end
Rule 20    column_type -> DATETIME LPAREN INTEGER RPAREN column_end
Rule 21    column_type -> VARCHAR LPAREN INTEGER RPAREN column_end
Rule 22    column_type -> CHAR LPAREN INTEGER RPAREN column_end
Rule 23    column_type -> TIMESTAMP column_end
Rule 24    column_end -> collate NOT NULL comment_end
Rule 25    column_end -> collate NOT NULL DEFAULT SCONST comment_end
Rule 26    column_end -> collate DEFAULT NULL comment_end
Rule 27    column_end -> collate NULL DEFAULT NULL comment_end
Rule 28    column_end -> collate UNSIGNED AUTO_INCREMENT comment_end
Rule 29    column_end -> collate NOT NULL AUTO_INCREMENT comment_end
Rule 30    column_end -> collate NOT NULL DEFAULT CURRENT_TIMESTAMP comment_end
Rule 31    column_end -> collate NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP comment_end
Rule 32    column_end -> empty
Rule 33    collate -> COLLATE identifier
Rule 34    collate -> empty
Rule 35    comment_end -> COMMENT SCONST
Rule 36    comment_end -> empty
Rule 37    primary_clause -> PRIMARY KEY LPAREN index_column_list RPAREN
Rule 38    primary_clause -> PRIMARY KEY LPAREN index_column_list RPAREN COMMA index_list
Rule 39    index_list -> index_key identifier LPAREN index_column_list RPAREN index_end
Rule 40    index_list -> index_list COMMA index_key identifier LPAREN index_column_list RPAREN index_end
Rule 41    index_key -> KEY
Rule 42    index_key -> UNIQUE KEY
Rule 43    index_column_list -> identifier
Rule 44    index_column_list -> index_column_list COMMA identifier
Rule 45    index_end -> BLOCK_SIZE INTEGER
Rule 46    index_end -> empty
Rule 47    statement -> cursor_specification
Rule 48    statement -> delete
Rule 49    statement -> update
Rule 50    statement -> insert
Rule 51    insert -> INSERT ignore INTO table_reference VALUES LPAREN insert_value RPAREN
Rule 52    insert -> INSERT ignore INTO table_reference LPAREN index_column_list RPAREN VALUES LPAREN insert_value RPAREN
Rule 53    insert -> INSERT ignore INTO table_reference LPAREN index_column_list RPAREN query_spec
Rule 54    insert -> INSERT ignore INTO table_reference query_spec
Rule 55    insert_value -> value
Rule 56    insert_value -> insert_value COMMA value
Rule 57    ignore -> IGNORE
Rule 58    ignore -> empty
Rule 59    delete -> DELETE FROM relations where_opt order_by_opt limit_opt
Rule 60    update -> UPDATE relations SET update_set_list where_opt order_by_opt limit_opt
Rule 61    update_set_list -> update_set
Rule 62    update_set_list -> update_set_list COMMA update_set
Rule 63    update_set -> comparison_predicate
Rule 64    cursor_specification -> query_expression order_by_opt limit_opt for_update_opt
Rule 65    subquery -> LPAREN query_expression order_by_opt limit_opt RPAREN
Rule 66    for_update_opt -> FOR UPDATE
Rule 67    for_update_opt -> FOR UPDATE NOWAIT
Rule 68    for_update_opt -> FOR UPDATE WAIT INTEGER
Rule 69    for_update_opt -> empty
Rule 70    query_expression -> query_expression_body
Rule 71    query_expression_body -> nonjoin_query_expression
Rule 72    query_expression_body -> joined_table
Rule 73    order_by_opt -> ORDER BY sort_items
Rule 74    order_by_opt -> empty
Rule 75    sort_items -> sort_item
Rule 76    sort_items -> sort_items COMMA sort_item
Rule 77    sort_item -> value_expression order_opt null_ordering_opt
Rule 78    order_opt -> ASC
Rule 79    order_opt -> DESC
Rule 80    order_opt -> empty
Rule 81    null_ordering_opt -> NULLS FIRST
Rule 82    null_ordering_opt -> NULLS LAST
Rule 83    null_ordering_opt -> empty
Rule 84    limit_opt -> LIMIT INTEGER
Rule 85    limit_opt -> LIMIT INTEGER COMMA INTEGER
Rule 86    limit_opt -> LIMIT QM
Rule 87    limit_opt -> LIMIT QM COMMA QM
Rule 88    limit_opt -> LIMIT ALL
Rule 89    limit_opt -> LIMIT INTEGER OFFSET INTEGER
Rule 90    limit_opt -> empty
Rule 91    nonjoin_query_expression -> nonjoin_query_term
Rule 92    nonjoin_query_expression -> nonjoin_query_expression UNION set_quantifier_opt nonjoin_query_term
Rule 93    nonjoin_query_expression -> nonjoin_query_expression EXCEPT set_quantifier_opt nonjoin_query_term
Rule 94    nonjoin_query_term -> nonjoin_query_primary
Rule 95    nonjoin_query_term -> nonjoin_query_term INTERSECT set_quantifier_opt nonjoin_query_primary
Rule 96    nonjoin_query_primary -> simple_table
Rule 97    nonjoin_query_primary -> LPAREN nonjoin_query_expression RPAREN
Rule 98    simple_table -> query_spec
Rule 99    simple_table -> explicit_table
Rule 100   simple_table -> table_value_constructor
Rule 101   explicit_table -> TABLE qualified_name
Rule 102   table_value_constructor -> VALUES values_list
Rule 103   values_list -> values_list COMMA expression
Rule 104   values_list -> expression
Rule 105   query_spec -> SELECT select_items table_expression_opt
Rule 106   where_opt -> WHERE search_condition
Rule 107   where_opt -> WHERE LPAREN search_condition RPAREN
Rule 108   where_opt -> empty
Rule 109   group_by_opt -> GROUP BY grouping_expressions
Rule 110   group_by_opt -> empty
Rule 111   grouping_expressions -> value_expression
Rule 112   grouping_expressions -> grouping_expressions COMMA value_expression
Rule 113   having_opt -> HAVING search_condition
Rule 114   having_opt -> empty
Rule 115   set_quantifier_opt -> ALL
Rule 116   set_quantifier_opt -> empty
Rule 117   select_items -> select_item
Rule 118   select_items -> select_items COMMA select_item
Rule 119   select_item -> derived_column
Rule 120   select_item -> DISTINCT LPAREN derived_column RPAREN
Rule 121   select_item -> DISTINCT derived_column
Rule 122   derived_column -> value_expression alias_opt
Rule 123   table_expression_opt -> FROM relations where_opt group_by_opt having_opt for_update_opt
Rule 124   table_expression_opt -> empty
Rule 125   relations -> relations COMMA table_reference
Rule 126   relations -> table_reference
Rule 127   table_reference -> table_primary
Rule 128   table_reference -> joined_table
Rule 129   table_primary -> aliased_relation
Rule 130   table_primary -> derived_table
Rule 131   joined_table -> cross_join
Rule 132   joined_table -> qualified_join
Rule 133   joined_table -> natural_join
Rule 134   cross_join -> table_reference CROSS JOIN table_primary
Rule 135   qualified_join -> table_reference join_type JOIN table_reference join_criteria
Rule 136   natural_join -> table_reference NATURAL join_type JOIN table_primary
Rule 137   join_type -> INNER
Rule 138   join_type -> LEFT outer_opt
Rule 139   join_type -> RIGHT outer_opt
Rule 140   join_type -> FULL outer_opt
Rule 141   join_type -> empty
Rule 142   outer_opt -> OUTER
Rule 143   outer_opt -> empty
Rule 144   join_criteria -> ON search_condition
Rule 145   join_criteria -> USING LPAREN join_columns RPAREN
Rule 146   join_criteria -> empty
Rule 147   join_columns -> identifier
Rule 148   join_columns -> join_columns COMMA identifier
Rule 149   aliased_relation -> qualified_name alias_opt
Rule 150   derived_table -> subquery alias_opt
Rule 151   alias_opt -> alias
Rule 152   alias_opt -> empty
Rule 153   alias -> as_opt identifier
Rule 154   expression -> search_condition
Rule 155   search_condition -> boolean_term
Rule 156   search_condition -> LPAREN search_condition RPAREN
Rule 157   search_condition -> search_condition OR search_condition
Rule 158   search_condition -> search_condition AND search_condition
Rule 159   boolean_term -> boolean_factor
Rule 160   boolean_term -> LPAREN boolean_term RPAREN
Rule 161   boolean_factor -> not_opt boolean_test
Rule 162   boolean_test -> boolean_primary
Rule 163   boolean_primary -> predicate
Rule 164   boolean_primary -> value_expression
Rule 165   predicate -> comparison_predicate
Rule 166   predicate -> between_predicate
Rule 167   predicate -> in_predicate
Rule 168   predicate -> like_predicate
Rule 169   predicate -> regexp_predicate
Rule 170   predicate -> null_predicate
Rule 171   predicate -> exists_predicate
Rule 172   comparison_predicate -> value_expression comparison_operator value_expression
Rule 173   between_predicate -> value_expression not_opt BETWEEN value_expression AND value_expression
Rule 174   in_predicate -> value_expression not_opt IN in_value
Rule 175   in_value -> LPAREN in_expressions RPAREN
Rule 176   in_value -> subquery
Rule 177   in_expressions -> value_expression
Rule 178   in_expressions -> in_expressions COMMA value_expression
Rule 179   like_predicate -> value_expression not_opt LIKE value_expression
Rule 180   regexp_predicate -> value_expression REGEXP value_expression
Rule 181   null_predicate -> value_expression IS not_opt NULL
Rule 182   exists_predicate -> EXISTS subquery
Rule 183   value_expression -> numeric_value_expression
Rule 184   numeric_value_expression -> numeric_value_expression PLUS term
Rule 185   numeric_value_expression -> numeric_value_expression MINUS term
Rule 186   numeric_value_expression -> term
Rule 187   term -> term ASTERISK factor
Rule 188   term -> term SLASH factor
Rule 189   term -> term PERCENT factor
Rule 190   term -> term CONCAT factor
Rule 191   term -> factor
Rule 192   factor -> sign_opt primary_expression
Rule 193   primary_expression -> parenthetic_primary_expression
Rule 194   primary_expression -> base_primary_expression
Rule 195   parenthetic_primary_expression -> LPAREN value_expression RPAREN
Rule 196   parenthetic_primary_expression -> LPAREN parenthetic_primary_expression RPAREN
Rule 197   base_primary_expression -> value
Rule 198   base_primary_expression -> qualified_name
Rule 199   base_primary_expression -> subquery
Rule 200   base_primary_expression -> function_call
Rule 201   base_primary_expression -> date_time
Rule 202   base_primary_expression -> case_specification
Rule 203   base_primary_expression -> cast_specification
Rule 204   value -> NULL
Rule 205   value -> SCONST
Rule 206   value -> number
Rule 207   value -> boolean_value
Rule 208   value -> QUOTED_IDENTIFIER
Rule 209   value -> QM
Rule 210   function_call -> qualified_name LPAREN call_args RPAREN
Rule 211   function_call -> qualified_name LPAREN DISTINCT call_args RPAREN
Rule 212   call_args -> call_list
Rule 213   call_args -> empty_call_args
Rule 214   empty_call_args -> ASTERISK
Rule 215   empty_call_args -> empty
Rule 216   case_specification -> simple_case
Rule 217   case_specification -> searched_case
Rule 218   simple_case -> CASE value_expression when_clauses else_opt END
Rule 219   searched_case -> CASE when_clauses else_opt END
Rule 220   cast_specification -> CAST LPAREN value_expression AS data_type RPAREN
Rule 221   when_clauses -> when_clauses when_clause
Rule 222   when_clauses -> when_clause
Rule 223   when_clause -> WHEN search_condition THEN value_expression
Rule 224   else_opt -> ELSE value_expression
Rule 225   else_opt -> empty
Rule 226   call_list -> call_list COMMA expression
Rule 227   call_list -> expression
Rule 228   data_type -> base_data_type type_param_list_opt
Rule 229   type_param_list_opt -> LPAREN type_param_list RPAREN
Rule 230   type_param_list_opt -> empty
Rule 231   type_param_list -> type_param_list COMMA type_parameter
Rule 232   type_param_list -> type_parameter
Rule 233   type_parameter -> INTEGER
Rule 234   type_parameter -> base_data_type
Rule 235   base_data_type -> identifier
Rule 236   date_time -> CURRENT_DATE
Rule 237   date_time -> CURRENT_TIME integer_param_opt
Rule 238   date_time -> CURRENT_TIMESTAMP integer_param_opt
Rule 239   date_time -> LOCALTIME integer_param_opt
Rule 240   date_time -> LOCALTIMESTAMP integer_param_opt
Rule 241   comparison_operator -> EQ
Rule 242   comparison_operator -> NE
Rule 243   comparison_operator -> LT
Rule 244   comparison_operator -> LE
Rule 245   comparison_operator -> GT
Rule 246   comparison_operator -> GE
Rule 247   as_opt -> AS
Rule 248   as_opt -> empty
Rule 249   not_opt -> NOT
Rule 250   not_opt -> empty
Rule 251   boolean_value -> TRUE
Rule 252   boolean_value -> FALSE
Rule 253   sign_opt -> sign
Rule 254   sign_opt -> empty
Rule 255   sign -> PLUS
Rule 256   sign -> MINUS
Rule 257   integer_param_opt -> LPAREN INTEGER RPAREN
Rule 258   integer_param_opt -> LPAREN RPAREN
Rule 259   integer_param_opt -> empty
Rule 260   qualified_name -> qualified_name PERIOD qualified_name
Rule 261   qualified_name -> identifier
Rule 262   identifier -> IDENTIFIER
Rule 263   identifier -> quoted_identifier
Rule 264   identifier -> non_reserved
Rule 265   identifier -> DIGIT_IDENTIFIER
Rule 266   identifier -> ASTERISK
Rule 267   non_reserved -> NON_RESERVED
Rule 268   quoted_identifier -> BACKQUOTED_IDENTIFIER
Rule 269   number -> DECIMAL
Rule 270   number -> INTEGER
Rule 271   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
ALL                  : 88 115
ALTER                : 
ANALYZE              : 
AND                  : 158 173
ANY                  : 
APPROXIMATE          : 
ARRAY                : 
AS                   : 220 247
ASC                  : 78
ASTERISK             : 187 214 266
AT                   : 
AUTO_INCREMENT       : 28 29
BACKQUOTED_IDENTIFIER : 268
BERNOULLI            : 
BETWEEN              : 173
BIGINT               : 16 17
BLOCK_SIZE           : 8 45
BY                   : 73 109
CALL                 : 
CASE                 : 218 219
CAST                 : 220
CATALOGS             : 
CHAR                 : 22
CHARSET              : 7 8
COALESCE             : 
COLLATE              : 8 33
COLUMN               : 
COLUMNS              : 
COMMA                : 6 10 38 40 44 56 62 76 85 87 103 112 118 125 148 178 226 231
COMMENT              : 35
COMMIT               : 
COMMITTED            : 
COMPRESSION          : 8
CONCAT               : 190
CONFIDENCE           : 
CONSTRAINT           : 
CREATE               : 5 6
CROSS                : 134
CUBE                 : 
CURRENT              : 
CURRENT_DATE         : 236
CURRENT_TIME         : 237
CURRENT_TIMESTAMP    : 30 31 31 238
DATA                 : 
DATE                 : 
DATETIME             : 19 20
DAY                  : 
DECIMAL              : 269
DEFAULT              : 7 8 25 26 27 30 31
DELETE               : 59
DESC                 : 79
DESCRIBE             : 
DIGIT_IDENTIFIER     : 265
DISTINCT             : 120 121 211
DISTRIBUTED          : 
DROP                 : 
ELSE                 : 224
END                  : 218 219
ENGINE               : 7
EQ                   : 7 7 8 8 8 8 8 8 8 8 241
ESCAPE               : 
EXCEPT               : 93
EXISTS               : 182
EXPLAIN              : 
EXTRACT              : 
FALSE                : 8 252
FIRST                : 81
FLOAT                : 15
FOLLOWING            : 
FOR                  : 66 67 68
FORCE                : 
FORMAT               : 
FROM                 : 59 123
FULL                 : 140
FUNCTIONS            : 
GE                   : 246
GRANT                : 
GRAPHVIZ             : 
GROUP                : 109
GROUPING             : 
GT                   : 245
HAVING               : 113
HOUR                 : 
ICONST               : 
IDENTIFIER           : 262
IF                   : 
IGNORE               : 57
IN                   : 174
INDEX                : 
INNER                : 137
INSERT               : 51 52 53 54
INT                  : 13 14
INTEGER              : 8 8 8 8 14 17 18 20 21 22 45 68 84 85 85 89 89 233 257 270
INTERSECT            : 95
INTERVAL             : 
INTO                 : 51 52 53 54
IS                   : 181
ISOLATION            : 
JOIN                 : 134 135 136
KEY                  : 37 38 41 42
LAST                 : 82
LE                   : 244
LEFT                 : 138
LEVEL                : 
LIKE                 : 179
LIMIT                : 84 85 86 87 88 89
LOCALTIME            : 239
LOCALTIMESTAMP       : 240
LOCK                 : 
LOGICAL              : 
LPAREN               : 5 6 14 17 18 20 21 22 37 38 39 40 51 52 52 53 65 97 107 120 145 156 160 175 195 196 210 211 220 229 257 258
LT                   : 243
MAP                  : 
MINUS                : 185 256
MINUTE               : 
MODE                 : 
MONTH                : 
NATURAL              : 136
NE                   : 242
NFC                  : 
NFD                  : 
NFKC                 : 
NFKD                 : 
NO                   : 
NON_RESERVED         : 267
NORMALIZE            : 
NOT                  : 24 25 29 30 31 249
NOWAIT               : 67
NULL                 : 24 25 26 27 27 29 30 31 181 204
NULLIF               : 
NULLS                : 81 82
NUMBER               : 
OFFSET               : 89
ON                   : 31 144
ONLY                 : 
OPTION               : 
OR                   : 157
ORDER                : 73
ORDINALITY           : 
OUTER                : 142
OVER                 : 
PARTITION            : 
PARTITIONS           : 
PCTFREE              : 8
PERCENT              : 189
PERIOD               : 260
PLUS                 : 184 255
POISSONIZED          : 
POSITION             : 
PRECEDING            : 
PRIMARY              : 37 38
PRIVILEGES           : 
PUBLIC               : 
QM                   : 86 87 87 209
QUOTED_IDENTIFIER    : 208
RANGE                : 
READ                 : 
RECURSIVE            : 
REGEXP               : 180
RENAME               : 
REPEATABLE           : 
REPLACE              : 
REPLICA_NUM          : 8
RESCALED             : 
RESET                : 
RIGHT                : 139
ROLLBACK             : 
ROLLUP               : 
ROW                  : 
ROWS                 : 
RPAREN               : 5 6 14 17 18 20 21 22 37 38 39 40 51 52 52 53 65 97 107 120 145 156 160 175 195 196 210 211 220 229 257 258
SCHEMAS              : 
SCONST               : 8 25 35 205
SECOND               : 
SELECT               : 105
SERIALIZABLE         : 
SESSION              : 
SET                  : 60
SETS                 : 
SHARE                : 
SHOW                 : 
SLASH                : 188
SOME                 : 
START                : 
STRATIFY             : 
STRING               : 
SUBSTRING            : 
SYSTEM               : 
TABLE                : 5 6 101
TABLES               : 
TABLESAMPLE          : 
TABLET_SIZE          : 8
TEXT                 : 
THEN                 : 223
TIME                 : 
TIMESTAMP            : 23
TINYINT              : 18
TO                   : 
TOP                  : 
TRANSACTION          : 
TRUE                 : 251
TRY                  : 
TRY_CAST             : 
TYPE                 : 
UNBOUNDED            : 
UNCOMMITTED          : 
UNION                : 92
UNIQUE               : 12 42
UNNEST               : 
UNSIGNED             : 28
UPDATE               : 31 60 66 67 68
USE                  : 
USE_BLOOM_FILTER     : 8
USING                : 145
VALUES               : 51 52 102
VARCHAR              : 21
VIEW                 : 
WAIT                 : 68
WHEN                 : 223
WHERE                : 106 107
WITH                 : 
WORK                 : 
WRITE                : 
YEAR                 : 
ZONE                 : 
error                : 

Nonterminals, with rules where they appear

alias                : 151
alias_opt            : 122 149 150
aliased_relation     : 129
as_opt               : 153
base_data_type       : 228 234
base_primary_expression : 194
between_predicate    : 166
boolean_factor       : 159
boolean_primary      : 162
boolean_term         : 155 160
boolean_test         : 161
boolean_value        : 207
call_args            : 210 211
call_list            : 212 226
case_specification   : 202
cast_specification   : 203
collate              : 24 25 26 27 28 29 30 31
column               : 9 10
column_end           : 13 14 15 16 17 18 19 20 21 22 23
column_list          : 5 6 10
column_type          : 11 12
command              : 0
comment_end          : 24 25 26 27 28 29 30 31
comparison_operator  : 172
comparison_predicate : 63 165
create_table         : 3
create_table_end     : 5 6
cross_join           : 131
cursor_specification : 47
data_type            : 220
date_time            : 201
ddl                  : 1
delete               : 48
derived_column       : 119 120 121
derived_table        : 130
dml                  : 2
else_opt             : 218 219
empty                : 32 34 36 46 58 69 74 80 83 90 108 110 114 116 124 141 143 146 152 215 225 230 248 250 254 259
empty_call_args      : 213
exists_predicate     : 171
explicit_table       : 99
expression           : 103 104 226 227
factor               : 187 188 189 190 191
for_update_opt       : 64 123
function_call        : 200
group_by_opt         : 123
grouping_expressions : 109 112
having_opt           : 123
identifier           : 5 6 7 7 8 8 11 12 33 39 40 43 44 147 148 153 235 261
ignore               : 51 52 53 54
in_expressions       : 175 178
in_predicate         : 167
in_value             : 174
index_column_list    : 37 38 39 40 44 52 53
index_end            : 39 40
index_key            : 39 40
index_list           : 38 40
insert               : 50
insert_value         : 51 52 56
integer_param_opt    : 237 238 239 240
join_columns         : 145 148
join_criteria        : 135
join_type            : 135 136
joined_table         : 72 128
like_predicate       : 168
limit_opt            : 59 60 64 65
natural_join         : 133
non_reserved         : 264
nonjoin_query_expression : 71 92 93 97
nonjoin_query_primary : 94 95
nonjoin_query_term   : 91 92 93 95
not_opt              : 161 173 174 179 181
null_ordering_opt    : 77
null_predicate       : 170
number               : 206
numeric_value_expression : 183 184 185
order_by_opt         : 59 60 64 65
order_opt            : 77
outer_opt            : 138 139 140
parenthetic_primary_expression : 193 196
predicate            : 163
primary_clause       : 6
primary_expression   : 192
qualified_join       : 132
qualified_name       : 101 149 198 210 211 260 260
query_expression     : 64 65
query_expression_body : 70
query_spec           : 53 54 98
quoted_identifier    : 263
regexp_predicate     : 169
relations            : 59 60 123 125
search_condition     : 106 107 113 144 154 156 157 157 158 158 223
searched_case        : 217
select_item          : 117 118
select_items         : 105 118
set_quantifier_opt   : 92 93 95
sign                 : 253
sign_opt             : 192
simple_case          : 216
simple_table         : 96
sort_item            : 75 76
sort_items           : 73 76
statement            : 4
subquery             : 150 176 182 199
table_expression_opt : 105
table_primary        : 127 134 136
table_reference      : 51 52 53 54 125 126 134 135 135 136
table_value_constructor : 100
term                 : 184 185 186 187 188 189 190
type_param_list      : 229 231
type_param_list_opt  : 228
type_parameter       : 231 232
update               : 49
update_set           : 61 62
update_set_list      : 60 62
value                : 55 56 197
value_expression     : 77 111 112 122 164 172 172 173 173 173 174 177 178 179 179 180 180 181 195 218 220 223 224
values_list          : 102 103
when_clause          : 221 222
when_clauses         : 218 219 221
where_opt            : 59 60 123

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . ddl
    (2) command -> . dml
    (3) ddl -> . create_table
    (4) dml -> . statement
    (5) create_table -> . CREATE TABLE identifier LPAREN column_list RPAREN create_table_end
    (6) create_table -> . CREATE TABLE identifier LPAREN column_list COMMA primary_clause RPAREN create_table_end
    (47) statement -> . cursor_specification
    (48) statement -> . delete
    (49) statement -> . update
    (50) statement -> . insert
    (64) cursor_specification -> . query_expression order_by_opt limit_opt for_update_opt
    (59) delete -> . DELETE FROM relations where_opt order_by_opt limit_opt
    (60) update -> . UPDATE relations SET update_set_list where_opt order_by_opt limit_opt
    (51) insert -> . INSERT ignore INTO table_reference VALUES LPAREN insert_value RPAREN
    (52) insert -> . INSERT ignore INTO table_reference LPAREN index_column_list RPAREN VALUES LPAREN insert_value RPAREN
    (53) insert -> . INSERT ignore INTO table_reference LPAREN index_column_list RPAREN query_spec
    (54) insert -> . INSERT ignore INTO table_reference query_spec
    (70) query_expression -> . query_expression_body
    (71) query_expression_body -> . nonjoin_query_expression
    (72) query_expression_body -> . joined_table
    (91) nonjoin_query_expression -> . nonjoin_query_term
    (92) nonjoin_query_expression -> . nonjoin_query_expression UNION set_quantifier_opt nonjoin_query_term
    (93) nonjoin_query_expression -> . nonjoin_query_expression EXCEPT set_quantifier_opt nonjoin_query_term
    (131) joined_table -> . cross_join
    (132) joined_table -> . qualified_join
    (133) joined_table -> . natural_join
    (94) nonjoin_query_term -> . nonjoin_query_primary
    (95) nonjoin_query_term -> . nonjoin_query_term INTERSECT set_quantifier_opt nonjoin_query_primary
    (134) cross_join -> . table_reference CROSS JOIN table_primary
    (135) qualified_join -> . table_reference join_type JOIN table_reference join_criteria
    (136) natural_join -> . table_reference NATURAL join_type JOIN table_primary
    (96) nonjoin_query_primary -> . simple_table
    (97) nonjoin_query_primary -> . LPAREN nonjoin_query_expression RPAREN
    (127) table_reference -> . table_primary
    (128) table_reference -> . joined_table
    (98) simple_table -> . query_spec
    (99) simple_table -> . explicit_table
    (100) simple_table -> . table_value_constructor
    (129) table_primary -> . aliased_relation
    (130) table_primary -> . derived_table
    (105) query_spec -> . SELECT select_items table_expression_opt
    (101) explicit_table -> . TABLE qualified_name
    (102) table_value_constructor -> . VALUES values_list
    (149) aliased_relation -> . qualified_name alias_opt
    (150) derived_table -> . subquery alias_opt
    (260) qualified_name -> . qualified_name PERIOD qualified_name
    (261) qualified_name -> . identifier
    (65) subquery -> . LPAREN query_expression order_by_opt limit_opt RPAREN
    (262) identifier -> . IDENTIFIER
    (263) identifier -> . quoted_identifier
    (264) identifier -> . non_reserved
    (265) identifier -> . DIGIT_IDENTIFIER
    (266) identifier -> . ASTERISK
    (268) quoted_identifier -> . BACKQUOTED_IDENTIFIER
    (267) non_reserved -> . NON_RESERVED

    CREATE          shift and go to state 6
    DELETE          shift and go to state 15
    UPDATE          shift and go to state 16
    INSERT          shift and go to state 17
    LPAREN          shift and go to state 9
    SELECT          shift and go to state 35
    TABLE           shift and go to state 7
    VALUES          shift and go to state 19
    IDENTIFIER      shift and go to state 38
    DIGIT_IDENTIFIER shift and go to state 41
    ASTERISK        shift and go to state 42
    BACKQUOTED_IDENTIFIER shift and go to state 43
    NON_RESERVED    shift and go to state 44

    command                        shift and go to state 1
    ddl                            shift and go to state 2
    dml                            shift and go to state 3
    create_table                   shift and go to state 4
    statement                      shift and go to state 5
    identifier                     shift and go to state 8
    cursor_specification           shift and go to state 10
    delete                         shift and go to state 11
    update                         shift and go to state 12
    insert                         shift and go to state 13
    query_expression               shift and go to state 14
    table_reference                shift and go to state 18
    query_spec                     shift and go to state 20
    query_expression_body          shift and go to state 21
    nonjoin_query_expression       shift and go to state 22
    joined_table                   shift and go to state 23
    nonjoin_query_term             shift and go to state 24
    cross_join                     shift and go to state 25
    qualified_join                 shift and go to state 26
    natural_join                   shift and go to state 27
    nonjoin_query_primary          shift and go to state 28
    table_primary                  shift and go to state 29
    simple_table                   shift and go to state 30
    explicit_table                 shift and go to state 31
    table_value_constructor        shift and go to state 32
    aliased_relation               shift and go to state 33
    derived_table                  shift and go to state 34
    qualified_name                 shift and go to state 36
    subquery                       shift and go to state 37
    quoted_identifier              shift and go to state 39
    non_reserved                   shift and go to state 40

state 1

    (0) S' -> command .



state 2

    (1) command -> ddl .

    $end            reduce using rule 1 (command -> ddl .)


state 3

    (2) command -> dml .

    $end            reduce using rule 2 (command -> dml .)


state 4

    (3) ddl -> create_table .

    $end            reduce using rule 3 (ddl -> create_table .)


state 5

    (4) dml -> statement .

    $end            reduce using rule 4 (dml -> statement .)


state 6

    (5) create_table -> CREATE . TABLE identifier LPAREN column_list RPAREN create_table_end
    (6) create_table -> CREATE . TABLE identifier LPAREN column_list COMMA primary_clause RPAREN create_table_end

    TABLE           shift and go to state 45


state 7

    (101) explicit_table -> TABLE . qualified_name
    (260) qualified_name -> . qualified_name PERIOD qualified_name
    (261) qualified_name -> . identifier
    (262) identifier -> . IDENTIFIER
    (263) identifier -> . quoted_identifier
    (264) identifier -> . non_reserved
    (265) identifier -> . DIGIT_IDENTIFIER
    (266) identifier -> . ASTERISK
    (268) quoted_identifier -> . BACKQUOTED_IDENTIFIER
    (267) non_reserved -> . NON_RESERVED

    IDENTIFIER      shift and go to state 38
    DIGIT_IDENTIFIER shift and go to state 41
    ASTERISK        shift and go to state 42
    BACKQUOTED_IDENTIFIER shift and go to state 43
    NON_RESERVED    shift and go to state 44

    qualified_name                 shift and go to state 46
    identifier                     shift and go to state 8
    quoted_identifier              shift and go to state 39
    non_reserved                   shift and go to state 40

state 8

    (261) qualified_name -> identifier .
